2002-05-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* src/chat_window.cpp: Commented out some lines I
	use for testing.

2002-05-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* src/chat_window.cpp (gnomemeeting_chat_window_text_insert):
	(gnomemeeting_init_chat_window): Removed deprecated stuff and
	ported to GtkTextView|Buffer|Tag|Mark|Iter

	* common.h (struct _GM_window_widgets): Added some new fields and
	changes some old ones.

	* endpoint.cpp: Ported to my new changes.

2002-05-01  Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp, src/druid.h: Changed the API for the druid. Needs
	to be called with "menu" as parameter if we don't want the druid
	to exit GM on Cancel.

	* src/main_window.cpp: Complies with the new API.

	* src/menu.cpp: Added a possibility to call the druid again from the
	Edit menu.
	
2002-05-01  Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schema.in: Default video device is now /dev/video0.
	
2002-05-01  Damien Sandras  <dsandras@seconix.com>

	* pixmaps/gnomemeeting-logo.png: Updated version number.

	* src/gnomemeeting.cpp: Fixed locale bug.
	
2002-05-01  Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schema.in: Changed default value for version,
	added new key to test for per version first execution (version).

	* pixmaps/Makefile.am: Added Lumi.png.

	* pixmaps/Lumi.png: Added.

	* src/Makefile.am: Added druid.cpp and druid.h.

	* src/druid.cpp, src/druid.h: Added those 2 files. Contains functions
	to create a 4 pages configuration druid to help with the setup.

	* src/main_window.cpp: Added support to call the first time druid
	if needed.

	* src/pref_window.cpp: Fixed bug (confusion between tr_ub and tr_vq).
	
2002-04-30  Damien Sandras  <dsandras@seconix.com>	

	* src/ldap_window.cpp: Add last browsed server as default.

	* src/misc.cpp: Ported to GTK2 (the end) and do not free the list
	that should not be freed!

2002-04-30  Damien Sandras  <dsandras@seconix.com>	
