@@ -1,5 +1,9 @@
 2002-05-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
+	* src/endpoint.cpp (OnConnectionCleared): Ported the 
+	clear the text chat on ended connection. This also fixed
+	some bugs.
+
 	* src/chat_window.cpp: Commented out some lines I
 	use for testing.
 
